# pg2_practica_7

./: README.md  setup.cfg
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
autopartes/: setup.cfg
autopartes/src/autoparts/: inventario.py
src/autoparts/: proveedor.py  reporte.py  repuesto.py  venta.py
