[metadata]
name = Autoparts
version = 0.0.1
description = Librería en Python para la gestión de repuestos de autos (inventarios, ventas y proveedores).
long_description = file:README.md
long_description_content_type = text/markdown
url = 
author = Rommel
author_email = rommelvalda.adm23ch@tecba.edu.bo
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where=src
